Adding some todos concerning discussion.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4706 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -95,8 +95,10 @@
 % TODO: Tim notes the use of the phrase "in terms of" a lot in this paper.  Too much.  This terminology should be limited to mathematical descriptions, and not aesthetic or perceptual issues.
 
 \begin{abstract}
-The abstract should be placed at the top left column and should contain
-about 150 words.
+
+
+
+
 \end{abstract}
 
 
@@ -331,6 +333,10 @@ A Visual representation of convex hulls also remains to be done, in particular w
 All of the points discussed in this article have been implemented in 2 dimensions, and need to be implemented in 1 and 3 dimensions as well.  
 
 A project for designing multi-touch/graphical interfaces to intuitively interact and set all the available parameters of DBAP has been initiated.
+
+% TODO: Discuss ViMiC as a more versatile and CPU-hungry alternative
+% TODO: DBAP for sound FX processing, references to Ali Momeni and Hipnoscope
+% TODO: DBAP for gaming: Traversing through a virtual soundscape by moving the speaker positions
 
 \section{Acknowledgements}
 
