Some edits here and thee, adding abstract
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4708 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -95,10 +95,7 @@
 % TODO: Tim notes the use of the phrase "in terms of" a lot in this paper.  Too much.  This terminology should be limited to mathematical descriptions, and not aesthetic or perceptual issues.
 
 \begin{abstract}
-
-
-
-
+Most common techniques for spatialization requires the listener to be positioned at a sweet-spot, surrounded by loudspeakers. For practical concert, stage and installation applications such layouts might be inconvenient. Distance-Based Amplitude Panning (DBAP) offers an alternative panning-based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented as C/C++ externals for Max/MSP, and as a module for the Jamoma framework.
 \end{abstract}
 
 
@@ -250,7 +247,7 @@ In installations or museum spaces spatial weights can also be used to confine so
 
 Spatial weights can be changed dynamically, thus allowing smooth transitions from one state to another. 
 
-This weight parameter, after being submitted to listening tests and visualization (as described later in\ref{subsection:Visual representation}), has revealed itself as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
+This weight parameter, after being submitted to listening tests and visualization (as described later in\ref{sec:visual_representation}), has revealed itself as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
 
 % CHANGED: Tim reworded this paragraph very significantly -- please check!
 % TODO: Tim also says... Due to a conflict in SVN, I can't tell what happened here -- maybe this paragraph was just deleted ?
