svn says there are diffs, so I'm comitting.. maybe I missed something... and hope I didn't break anything...
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4713 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -323,7 +323,7 @@ A visualisation of the response ranges for all speakers can be created by combin
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk_groups}}
-\caption{{\it Representation of the 2D distribution of levels for 5 speakers only, with different weights for each speaker: $[1.5,1.,1.,1.,0.75,1.2]$ for speakers $[5,8,9,10,11,12]$}}  
+\caption{{\it Representation of the 2D distribution of levels for 5 speakers only, with weights $[1.5,1.,1.,1.,0.75,1.2]$ for speakers $[5,8,9,10,11,12]$}}  
 \label{fig:5spk_weights}
 \end{figure}
 
