--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -16,7 +16,7 @@
 %____________________________________________________________
 %  !  !  !  !  !  !  !  !  !  !  !  ! user defined variables  !  !  !  !  !  !  !  !  !  !  !  !  !  !
 %==== set the title ====
-\def\papertitle{DBAP - Distance-based amplitude panning}
+\def\papertitle{DBAP - Distance-Based Amplitude Panning}
 %\def\papertitle{}	%-- should be empty for the submission anyway!
 
 %==== 1st submission: author name and affiliation are empty for anonymous submission ====
@@ -91,11 +91,10 @@
 
 
 
-% TODO: Write abstract!
 % TODO: Tim notes the use of the phrase "in terms of" a lot in this paper.  Too much.  This terminology should be limited to mathematical descriptions, and not aesthetic or perceptual issues.
 
 \begin{abstract}
-Most common techniques for spatialization require the listener to be positioned at a sweet-spot, surrounded by loudspeakers. For practical concert, stage and installation applications such layouts might be inconvenient. Distance-Based Amplitude Panning (DBAP) offers an alternative panning-based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented as C/C++ externals for Max/MSP, and as a module for the Jamoma framework.
+Most common techniques for spatialization require the listener to be positioned at a ``sweet spot'' surrounded by loudspeakers. For practical concert, stage and installation applications such layouts may not be undesirable. Distance-Based Amplitude Panning (DBAP) offers an alternative panning-based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented both as an external for Max/MSP and as a module for the Jamoma framework.
 \end{abstract}
 
 
@@ -114,7 +113,7 @@ Most common techniques for spatialization require the listener to be positioned 
 
 \section{Introduction}\label{sec:introduction}
 
-Multichannel and surround sound reproduction is becoming more common, both for consumer applications as well as for musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers.  Techniques for spatialization commonly assume that the position of a listener is known and fixed, and that the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialization techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap}, as well as both first-order and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
+Multichannel and surround sound reproduction is becoming more common, both for consumer applications as well as for musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers.  Techniques for spatialization commonly assume that the position of a listener is known and fixed, and that the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialization techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, Vector-Based Amplitude Panning (VBAP) \cite{Pulkki:1997vbap}, as well as both first-order and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
 
 Wave field synthesis (WFS) is a noticeable exception to the aforementioned ``sweet spot'' restriction, reproducing signals resulting in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}.
 
@@ -126,7 +125,6 @@ For real-time music and sound purposes, the relatively low CPU requirements of m
 
 Among the requirements imposed by VBAP and ambisonics, are that the listeners are restricted to a relatively small listening area surrounded by loudspeakers.  These requirements might be unfeasible or undesired in practical applications.  In the ideal concert situation the entire audience should have a detailed impression of the spatial content of the music, not limiting the impression to those sitting in the middle of the concert hall. In a sound installation context one might want the audience to be able to move around the space \cite{lossius:2008installations}.  Finally, for pragmatic and/or artistic reasons it might not be possible or desired to have loudspeakers arranged in a ring or a sphere.
 
-% CHANGED: Tim capitalized the DBAP words -- if not desired, feel free to undo it
 Distance-Based Amplitude Panning (DBAP) is a matrix-based spatialization technique that takes the actual positions of the speakers in space as the point of departure, while making no assumptions as to where the listeners are situated. This makes DBAP useful for a number of real-world situations including music for concerts, works for stage, installations, and museum sound design where predefined geometric speaker layouts might not apply.
 
 
@@ -136,14 +134,14 @@ Distance-Based Amplitude Panning (DBAP) is a matrix-based spatialization techniq
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Distance-based amplitude panning}
+\section{Distance-Based Amplitude Panning}
 
 \subsection{Fundamentals}
 
 % TODO: Tim changed the capitalization above -- but here it is again.  They should be the same, so what should it be?
 % CHANGED: Tim changed a couple of places where the word 'setup' was used.  This is a bit colloquial.  I replaced it with the word 'model'.  Discard or consider as appropriate. 
 
-\textit{Distance-based amplitude panning (DBAP)} extends the principle of equal intensity panning from a pair of speakers to a loudspeaker array of any size, with no \textit{a priori} assumptions about their positions in space or relative to each other.
+\textit{Distance-Based Amplitude Panning (DBAP)} extends the principle of equal intensity panning from a pair of speakers to a loudspeaker array of any size, with no \textit{a priori} assumptions about their positions in space or relative to each other.
 For simplicity, the method will be discussed in terms of a two-dimensional model with speakers and sources all positioned in the same horizontal plane. This can be readily extended to three dimensions.
 
 The position of a virtual source will be described in terms of Cartesian coordinates $(x_{s}, y_{s})$. For a model with $N$ speakers, the position of the $i$th speaker is given as $(x_{i}, y_{i})$. The distance from a source to each of the speakers can then be calculated as
