--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -263,7 +263,7 @@ The authors are also exploring a means by which to obtain a better numerical rep
 
 % TODO: Visualization is the other spelling of this word -- spelled with an s is the British spelling, which might be okay.
 
-\section{Implementation and visualisation}
+\section{Implementation and visualization}
 
 \subsection{Implementation}
 
@@ -294,8 +294,7 @@ In order to provide users with an intuitive understanding of the algorithm, a vi
 
 The method for creating this visualization consists in creating a graphical map of level response for each loudspeaker as a 2D matrix of levels. For each pixel of this matrix, the pixel value is set to the squared amplitude returned by the dbap algorithm if the source was located at this position. The visual result in figure \ref{fig:1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to $1$ and the darker ones are positions where amplitudes are close to $0$. As expected, the further away the source is from the loudspeaker, the lower the amplitude. However the presence of holes in the spatial distribution of the amplitude response illustrates how the DBAP algorithm works when a source moves between several loudspeakers.
 
-% TODO: Tim may not know what he is talking about, but he thinks the numbers for the dB values look odd in the PDF.  The 6 dB in particular.  Ignore if you think he's nuts.
-% Pascal agrees and suggests removing the dollar signs just in case it could look better, so he'll try that out, and let's see how it turns out
+% CHANGED: Tim may not know what he is talking about, but he thinks the numbers for the dB values look odd in the PDF.  The 6 dB in particular.  Ignore if you think he's nuts. Pascal agrees and suggests removing the dollar signs just in case it could look better, so he'll try that out, and let's see how it turns out
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{all_r_2_b_0}}
@@ -315,9 +314,7 @@ The method for creating this visualization consists in creating a graphical map 
 \label{fig:allspk3}
 \end{figure}
 
-% TODO: Tim worked on some minor wording issues below , but still isn't 100% sure what the first sentence means and also doesn't understand the second sentence at all.
-
-A visualisation of the response ranges for all speakers can be created by combining all figures of the same kind as fig. \ref{fig:1spk}, and then finding the maximum amplitude for 2D-position. The graphical result shows segmented parts in space corresponding to every spatial zone of predominance for every loudspeaker. Here the darker pixels have to be explained as positions where the source is mixed equally between the closest loudspeakers. Figures \ref{fig:allspk1}, \ref{fig:allspk2} and \ref{fig:allspk3} illustrate several settings of varying roll off and blur values. 
+A visualization of the response ranges for all speakers can be created by combining all figures of the same class as in fig. \ref{fig:1spk}, and then finding the maximum amplitude for a given 2D-position. The graphical result shows segmented parts in space corresponding to every spatial zone of predominance for each loudspeaker. Here the darker pixels have to be explained as positions where the source is mixed equally between the closest loudspeakers. Figures \ref{fig:allspk1}, \ref{fig:allspk2} and \ref{fig:allspk3} illustrate several combinations of varying roll off and blur values. 
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk_groups}}
@@ -332,6 +329,8 @@ These pictures are generated in realtime by the algorithm, and can thus be used 
 
 
 \section{Further development}
+
+% TODO: Tim thinks this entire section needs to be re-worked.  Right now it seems like a bullet list rather than a proper text.
 
 A Combination of convex hulls with spatial weights still needs to be done : A hull is created for each source, by including all speakers with non null weights. Further processing can be applied then, based on the distance value from the hull, in order to create a perception of encapsulated or congruent spaces in the same place.
 A Visual representation of convex hulls also remains to be done, in particular when combined with loudspeaker layers. A possible solution for that would be to create a spatial fade to black around the hull 
